added Oauth for twitch

--- a/public/members.html
+++ b/public/members.html
@@ -23,6 +23,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
+        <button type="submit" class="btn btn-default twitch">Authorize Twitch</button>
       </div>
     </div>
   </div>
