--- a/public/login.html
+++ b/public/login.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- This code is in login.handlebars: from line 14 to line 39 -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
