--- a/public/members.html
+++ b/public/members.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- This code is in members.handlebars: from line 14 to line 30 -->
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
