--- a/public/members.html
+++ b/public/members.html
@@ -2,35 +2,143 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+    <title>Passport Authentication</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- This code is in members.handlebars: from line 14 to line 30 -->
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
-    </div>
-  </div>
-</nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
-        <button type="submit" class="btn btn-default twitch">Authorize Twitch</button>
-      </div>
-    </div>
-  </div>
+    <div class="quarantineApp">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
+        <!-- Start Top Bar -->
+        <div class="title-bar-left">
+            <div class="top-bar">
+                <div class="top-bar-left">
+                    <ul class="menu">
+                        <li class="menu-text"><button type="button" data-open="offCanvasLeft"><img src="vault_logo.png"
+                                    alt="Vault Logo" height="30" width="30">
+                            </button>
+                        </li>
+                        <li><a href="/">Discover</a></li>
+                        <li><a href="#">Browse</a></li>
+                    </ul>
+                </div>
+                <div class="top-bar-right">
+                    <ul class="menu">
+                        <li><a href="/logout">Logout</a></li>
+                    </ul>
+                </div>
+                <div class="top-bar-left">
+                    <div class="search-input-animated">
+                        <span class="searchbox-icon"><i class="fa fa-search"></i></span>
+                        <input type="search" placeholder="Search" name="search" class="searchbox-input" required>
+                    </div>
+                </div>
+                <div class="top-bar-left" id="title-site">
+                    <h2>Quarantinee</h2>
+                </div>
+            </div>
+            <!-- End Top Bar -->
+
+            <!-- Start of App here -->
+
+            <div class="feed-page">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <h2>Welcome <span class="member-name"></span></h2>
+                            <a href="#" class="button">Authorize Twitch</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+                    <ul class="orbit-container">
+                        <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
+                                Slide</span>&#9664;</button>
+                        <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next
+                                Slide</span>&#9654;</button>
+                        <li class="orbit-slide is-active">
+                            <img src="https://placehold.it/2000x750" height="50%" width="2000px">
+                        </li>
+                    </ul>
+                </div>
+
+                <h2 class="text-center">Add a Post!</h2>
+
+                <form class="create-form text-center">
+
+                    <div class="form-group">
+                        <label for="auth">Author:</label>
+                        <input type="text" id="auth" name="author">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="quo">Edit Post:</label>
+                        <textarea id="quo" name="quote" rows="8" cols="40"></textarea>
+                    </div>
+
+                    <button type="submit">Add Post</button>
+                </form>
+
+                <div class="row column text-center">
+                    <h2>Recent Feeds</h2>
+                    <div id="user.posts">
+                        <div class="row">
+                            <div class="col-md-12 blog-container">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row column text-center">
+                    <h2>Suggestions</h2>
+                    <hr>
+                </div>
+
+                <div class="row small-up-2 large-up-4">
+                    <div class="column" id="Profile1">
+                        <img class="thumbnail" src="./img/rust_sample.PNG">
+                        <h5 id="user_name"></h5>
+                        <p></p>
+                        <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
+                    </div>
+                    <div class="column" id="Profile2">
+                        <img class="thumbnail" src="./img/overwatch_sample.PNG">
+                        <h5 id="user_name"></h5>
+                        <p></p>
+                        <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
+                    </div>
+                    <div class="column" id="Profile3">
+                        <img class="thumbnail" src="./img/apex_sample.PNG">
+                        <h5 id="user_name"></h5>
+                        <p></p>
+                        <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
+                    </div>
+                    <div class="column" id="Profile4">
+                        <img class="thumbnail" src="./img/minecraft_sample.PNG">
+                        <h5 id="user_name"></h5>
+                        <p></p>
+                        <a href="/twitch.tv/{{this.id}}" class="button expanded">User Page</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/members.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+
+    <script>
+        $(document).foundation();
+    </script>
 
 </body>
 
