--- a/public/members.html
+++ b/public/members.html
@@ -14,7 +14,7 @@
     <div class="quarantineApp">
 
         <!-- Start Top Bar -->
-        <div class="title-bar-left">
+        <div class="title-bar-left" id="nav-bar">
             <div class="top-bar">
                 <div class="top-bar-left">
                     <ul class="menu">
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
                 <div class="top-bar-left">
-                    <div class="search-input-animated" id="searchBox">
+                    <div class="search-input-animated" id="searchbox">
                         <span class="searchbox-icon"><i class="fa fa-search"></i></span>
                         <input type="search" placeholder="Search" name="search" class="searchbox-input" required>
                     </div>
@@ -56,7 +56,7 @@
                 </div>
             </div>
 
-            <div class="feed-page" id="feed-page">
+            <div class="feed-style" id="top-streams">
                 <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
                     <ul class="orbit-container">
                         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
@@ -71,21 +71,23 @@
 
                 <div id="postForm">
 
-                    <h2 class="text-center">Add a Post!</h2>
+                    <h3 class="text-center">Add to our live feed, say anything!</h3>
+                    <h5 class="text-center">Share your at home quarantine adventures!</h5>
+
 
                     <form class="create-form text-center">
 
-                        <div class="form-group">
+                        <div class="form-group" id="authorId">
                             <label for="auth">Author:</label>
                             <input type="text" id="auth" name="author">
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" id="editId">
                             <label for="quo">Edit Post:</label>
                             <textarea id="quo" name="quote" rows="8" cols="40"></textarea>
                         </div>
 
-                        <a class="button" type="submit" id="addPost">Add Post</a>
+                        <a class="button" type="submit" id="postBtn">Add Post</a>
 
                     </form>
 
@@ -106,25 +108,25 @@
 
                 <div class="row small-up-2 large-up-4">
                     <div class="column" id="Profile1">
-                        <img class="thumbnail" src="./img/rust_sample.PNG">
+                        <img class="thumbnail" src="/public/imgs/img/rust_sample.PNG">
                         <h5 id="user_name"></h5>
                         <p></p>
                         <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
                     </div>
                     <div class="column" id="Profile2">
-                        <img class="thumbnail" src="./img/overwatch_sample.PNG">
+                        <img class="thumbnail" src="/public/imgs/img/overwatch_sample.PNG">
                         <h5 id="user_name"></h5>
                         <p></p>
                         <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
                     </div>
                     <div class="column" id="Profile3">
-                        <img class="thumbnail" src="./img/apex_sample.PNG">
+                        <img class="thumbnail" src="/public/imgs/img/apex_sample.PNG">
                         <h5 id="user_name"></h5>
                         <p></p>
                         <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
                     </div>
                     <div class="column" id="Profile4">
-                        <img class="thumbnail" src="./img/minecraft_sample.PNG">
+                        <img class="thumbnail" src="/public/imgs/img/minecraft_sample.PNG">
                         <h5 id="user_name"></h5>
                         <p></p>
                         <a href="/twitch.tv/{{this.id}}" class="button expanded">User Page</a>
